# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
include $(top_srcdir)/common.mk
databasesdir = $(pythondir)/sage/databases
databases_PYTHON = \
    all.py conway.py cremona.py cunningham_tables.py db_class_polynomials.py \
    db_modular_polynomials.py __init__.py install.py jones.py lincodes.py \
    odlyzko.py sloane.py sql_db.py stein_watkins.py symbolic_data.py
