# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
include $(top_srcdir)/common.mk
doctestdir = $(pythondir)/sage/doctest

doctest_PYTHON = \
    all.py control.py forker.py __init__.py parsing.py reporting.py sources.py \
    test.py util.py

doctest_testsdir = $(doctestdir)/tests
doctest_tests_PYTHON = tests/nodoctest.py
