# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
include $(top_srcdir)/common.mk
dynamicsdir = $(pythondir)/sage/dynamics
dynamics_PYTHON = all.py __init__.py

dynamics_exchangesdir = $(dynamicsdir)/exchanges
dynamics_exchanges_PYTHON = \
    interval_exchanges/all.py \
    interval_exchanges/constructors.py \
    interval_exchanges/iet.py \
    interval_exchanges/__init__.py \
    interval_exchanges/labelled.py \
    interval_exchanges/reduced.py \
    interval_exchanges/template.py

dynamics_flatsurfacesdir = $(dynamicsdir)/flatsurfaces
dynamics_flatsurfaces_PYTHON = \
    flat_surfaces/all.py \
    flat_surfaces/__init__.py \
    flat_surfaces/quadratic_strata.py \
    flat_surfaces/strata.py
